<?xml version="1.0"?>
<package format="3">
  <name>orca_core</name>
  <version>0.1.0</version>
  <description>The orca_core package</description>
  <maintainer email="peiguorui2006@outlook.com">xingyi</maintainer>
  <license>MIT</license>
   <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
  </package>
